<resources>
    <string name="app_name">MAS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="invoice">INVOICE</string>
    <string name="account">Account</string>
    <string name="categories">Categories</string>
    <string name="stock">Stock</string>
    <string name="order">Order</string>
    <string name="home">Home</string>
</resources>